--- a/index.html
+++ b/index.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-   <meta charset="utf-8">
-   <link rel="stylesheet" type="text/css" href="style.css">
-   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Playfair+Display&display=swap" rel="stylesheet">
-   <title>Мой сайт | yepstepz.io</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Playfair+Display&display=swap"
+          rel="stylesheet">
+    <title>Мой сайт | yepstepz.io</title>
 </head>
 <body>
-   <div class="wrapper">
-      <h1 class="headline">Привет! Меня зовут Татьяна</h1>
-      <p class="content">Я фронтенд-разработчица, сейчас тружусь для веб-версии Сбербанка Онлайн.</p>
-      <h2 class="headline--second">Как со мной связаться</h2>
-      <p class="content">Пишите в <a class="content__link" href="https://t.me/yepstepz">телеграм</a>, благо, его разблокировали.</p>
-      <p class="content">Сейчас здесь немного пусто, но я уже работаю над этим.</p>
-   </div>
+<div class="wrapper">
+    <h1 class="headline">Привет! Меня зовут Татьяна</h1>
+    <p>Я фронтенд-разработчица, сейчас тружусь для веб-версии Сбербанка Онлайн.</p>
+    <h2 class="headline--second">Как со мной связаться</h2>
+    <p>Пишите в <a title="Ссылка на профиль в телеграм" class="inner-link" target="_blank" href="https://t.me/yepstepz">телеграм</a>,
+        благо, его разблокировали.</p>
+
+    <h2 class="headline--second">Чем я еще занимаюсь</h2>
+    <p>Иногда я выступаю с мини-докладами.
+        Почитать можно <a title="Ссылка на поддомен с докладами" class="inner-link" href="https://conf.yepstepz.io" target="_blank">здесь</a>
+    </p>
+</div>
 </body>
 </html>
